# rtu_mirea_vuc_schedule

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-build-push.sh  docker-compose-extended.yml  docker-compose-stack.yml  docker-compose.benchmark.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.service.yml  docker-compose.yml  gunicorn_conf.py  prestart.sh  prod.env  pyproject.toml  stack.env  start.sh
locust/: locustfile.py
monitoring/grafana/dashboards/: schedule-service-dashboard.json
monitoring/grafana/provisioning/: providers.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
pypi/: docker-compose.yml  extract_openapi.py  openapi.yaml  publish_package.py
schedule_service/: __main__.py  _logging.py  conftest.py  settings.py
schedule_service/pypi/: docker-compose.yml  extract_openapi.py  openapi.yaml  publish.py
schedule_service/services/: __init__.py
schedule_service/services/vuc_schedule_parser/: dependency.py  lifetime.py
schedule_service/services/vuc_schedule_parser/parser/: __init__.py  exceptions.py  main.py  schemas.py  utils.py
schedule_service/services/vuc_schedule_parser/tests/: test_parser.py
schedule_service/services/vuc_schedule_parser/workbook_updater/: base.py  lifetime.py
schedule_service/services/workbook_updater/: __main__.py
schedule_service/services/workbook_updater/files/3-course/: settings.yml
schedule_service/services/workbook_updater/files/4-course/: settings.yml
schedule_service/services/workbook_updater/files/5-course/: settings.yml
schedule_service/services/workbook_updater/tests/: test_workbook_updater.py
schedule_service/tests/: test_workbook_updater.py
schedule_service/web/: __init__.py  application.py  lifetime.py
schedule_service/web/api/: __init__.py
schedule_service/web/api/v1/: router.py
schedule_service/web/api/v1/schedule/: params.py  schemas.py  views.py
schedule_service/web/api/v1/workbook/: views.py
stack/: init-node.sh  init-primary.sh
workbook_updater/: __main__.py  settings.py
workbook_updater/files/3-course/: settings.yml
workbook_updater/files/4-course/: settings.yml
workbook_updater/files/5-course/: settings.yml
workbook_updater/tests/: test_workbook_updater.py
