[tool.poetry]
authors = ["coolworld2049 <coolworld2049@gmail.com>"]
description = ""
name = "rtu_mirea_vuc_schedule"
readme = "README.md"
version = "1.0.8"

[tool.poetry.dependencies]
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.2"
cashews = { extras = ["redis"], version = "^6.3.0" }
fastapi = "^0.104.0"
httptools = "^0.6.0"
loguru = "^0.7.0"
openpyxl = "^3.1.2"
prometheus-client = "^0.17.0"
prometheus-fastapi-instrumentator = "^6.1.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python = "^3.11"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
redis = "^5"
requests = "^2.31.0"
tenacity = "^8.2.3"
toml = "^0.10.2"
typing-extensions = "^4.7.1"
ujson = "^5.8.0"
uvicorn = "^0.23"
yarl = "^1.9.2"
coverage-badge = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
anyio = "3.7.1"
httpx = "^0.25.0"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22"
autoflake = "^1.6.1"
twine = "^4.0.2"
locust = "^2.17.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["schedule_service","workbook_updater",]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
testpaths = [
    "schedule_service/tests",
    "workbook_updater/tests",
]
addopts = ["--cov=schedule_service", "--cov=workbook_updater", "--ignore=./pypi"]

[tool.coverage.run]
source = ["schedule_service", "workbook_updater"]
omit = ["tests/*"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
